--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-BOT = MTqVsuPerSeCREtbOtToken
-OAI = sk-supersecretopenaitoken
-API = https://openrouter.ai/api/v1
+BOT_TOKEN = MTqVsuPerSeCREtbOtToken
+OPENAI_KEY = sk-supersecretopenaitoken
+API_URL = https://openrouter.ai/api/v1
